# heaptrack

./: .arcconfig  .clang-format  .dockerignore  .gitignore  .gitlab-ci.yml  .kateconfig  .kde-ci.yml  .reviewboardrc  .travis.yml  CMakeLists.txt  Messages.sh  README.md  accumulatedtracedata.cpp  accumulatedtracedata.h  allocationdata.h  config.h.cmake  dumpmallocinfo.cpp  dumpmallocinfo.h  format_sources  heaptrack.cpp  heaptrack.kdev4  heaptrack.sh.cmake  heaptrack_convert.cpp  heaptrack_convert2.cpp  heaptrack_inject.cpp  heaptrack_interpret.cpp  heaptrack_main.cpp  heaptrack_preload.cpp  heaptrack_print.cpp  indices.h  libheaptrack.cpp  libheaptrack.h  linereader.h  main.cpp  mallocinfo.kdev4  malloctrace.cpp  malloctrace_interpret.cpp  malloctrace_main.cpp  pointermap.h  run.sh  (+7 more)
.reuse/: dep5
cmake/: Copyright.txt  FindElfutils.cmake  FindLibDDemangle.cmake  FindLibRustcDemangle.cmake  FindLibunwind.cmake  FindSparseHash.cmake  FindSqlite.cmake  FindZSTD.cmake  FindZstd.cmake  Findnwind_capi.cmake
gui/: CMakeLists.txt  bottomupmodel.cpp  bottomupmodel.h  bottomupproxy.cpp  bottomupproxy.h  callercalleemodel.cpp  chartmodel.cpp  chartmodel.h  chartproxy.cpp  chartproxy.h  chartwidget.cpp  chartwidget.h  costdelegate.cpp  flamegraph.cpp  flamegraph.h  gui.cpp  gui_config.h.cmake  histogrammodel.cpp  histogrammodel.h  histogramwidget.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  model.cpp  model.h  modeltest.h  parser.cpp  parser.h  proxy.cpp  proxy.h  stacksmodel.cpp  summarydata.h  topproxy.cpp  treemodel.cpp  treemodel.h  treeproxy.cpp  treeproxy.h
libbacktrace/: CMakeLists.txt  README  btrace.cpp  btrace.h  unknown.c
po/ar/: heaptrack.po
po/ast/: heaptrack.po
po/ca/: heaptrack.po
po/ca@valencia/: heaptrack.po
po/cs/: heaptrack.po
po/da/: heaptrack.po
po/de/: heaptrack.po
po/en_GB/: heaptrack.po
po/eo/: heaptrack.po
po/es/: heaptrack.po
po/eu/: heaptrack.po
po/fr/: heaptrack.po
po/ga/: heaptrack.po
po/gl/: heaptrack.po
po/he/: heaptrack.po
po/ia/: heaptrack.po
po/it/: heaptrack.po
po/ja/: heaptrack.po
po/ka/: heaptrack.po
po/ko/: heaptrack.po
po/lt/: heaptrack.po
po/nl/: heaptrack.po
po/nn/: heaptrack.po
po/pl/: heaptrack.po
po/pt/: heaptrack.po
po/pt_BR/: heaptrack.po
po/ru/: heaptrack.po
po/sk/: heaptrack.po
po/sl/: heaptrack.po
po/sv/: heaptrack.po
po/tr/: heaptrack.po
po/ug/: heaptrack.po
po/uk/: heaptrack.po
po/zh_CN/: heaptrack.po
po/zh_TW/: heaptrack.po
screenshots/: .directory
src/: CMakeLists.txt
src/analyze/: CMakeLists.txt  accumulatedtracedata.cpp  accumulatedtracedata.h  allocationdata.h  analyze_config.h.cmake  filterparameters.h  peaktracker.h  suppressions.cpp  suppressions.h
src/analyze/gui/: CMakeLists.txt  callercalleemodel.cpp  callercalleemodel.h  chartmodel.cpp  chartmodel.h  chartproxy.cpp  chartproxy.h  chartwidget.cpp  chartwidget.h  costdelegate.cpp  costdelegate.h  costheaderview.cpp  costheaderview.h  flamegraph.cpp  flamegraph.h  gui.cpp  gui_config.h.cmake  hashmodel.cpp  hashmodel.h  histogrammodel.cpp  histogrammodel.h  histogramwidget.cpp  histogramwidget.h  locationdata.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  middleelide.cpp  middleelide.h  modeltest.cpp  modeltest.h  org.kde.heaptrack.appdata.xml  org.kde.heaptrack.desktop  parser.cpp  parser.h  proxystyle.cpp  proxystyle.h  resources.qrc  resultdata.h  stacksmodel.cpp  (+12 more)
src/analyze/gui/tests/: CMakeLists.txt  tst_middle_elide.cpp
src/analyze/print/: CMakeLists.txt  heaptrack_print.cpp
src/interpret/: CMakeLists.txt  demangler.cpp  demangler.h  dwarfdiecache.cpp  dwarfdiecache.h  heaptrack_interpret.cpp  symbolcache.cpp  symbolcache.h
src/track/: CMakeLists.txt  bufferedstream.h  heaptrack.sh.cmake  heaptrack_api.h  heaptrack_env.cpp  heaptrack_inject.cpp  heaptrack_preload.cpp  libheaptrack.cpp  libheaptrack.h  trace.h  trace_cache.h  trace_libunwind.cpp  trace_nwind_capi.cpp  trace_unwind_tables.cpp  tracetree.h
src/util/: CMakeLists.txt  config.h.cmake  indices.h  libunwind_config.h.cmake  linereader.h  linewriter.h  macroutils.h  pointermap.h
tests/: CMakeLists.txt  benchutil.h  callgraph.cpp  lib.cpp  lib.h  test.cpp  threaded.cpp  tst_trace.cpp
tests/auto/: CMakeLists.txt  expected_output.zst  heaptrack.embedded_lsan_suppressions.84207.zst  heaptrack.heaptrack_gui.99454.zst  heaptrack.heaptrack_gui.99529.zst  heaptrack.mock_executable.570491.raw.zst  run_heaptrack_test.sh  suppressions.txt  tempfile.h  tst_config.h.in  tst_heaptrack_interpret.cmake.sh  tst_inject.cpp  tst_io.cpp  tst_libheaptrack.cpp  tst_parser.cpp  tst_template_elision.cpp  tst_trace.cpp
tests/auto/mock_sysroot/: libmock.so.debug
tests/auto/no_asan/: CMakeLists.txt  tst_inject.cpp
tests/auto/test_sysroot/: README.md  heaptrack.test_sysroot.expected  heaptrack.test_sysroot.raw
tests/auto/test_sysroot/extra/: test_lib
tests/auto/test_sysroot/sysroot/usr/lib/: libc.so.6
tests/benchmarks/: CMakeLists.txt  bench_linereader.cpp  bench_parser.cpp  bench_pointerhash.cpp  bench_pointermap.cpp  bench_pointers.h  bench_pointersparsehash.cpp  bench_tree.cpp  measure_malloc_overhead.cpp
tests/manual/: CMakeLists.txt  callgraph.cpp  dlopen.cpp  embedded_lsan_suppressions.c  inlining.cpp  lib.cpp  lib.h  libc_leaks.c  libindirect.cpp  peak.c  perf-heaptrack.py  phdr.cpp  run_linkage_tests.sh  signals.cpp  test.c  test.cpp  test_aggregation.cpp  test_lib.cpp  test_linkage.c  threaded.cpp
tests/manual/with space/: CMakeLists.txt  my binary.cpp
tools/: Dockerfile  anonymize  build_appimage.sh  build_appimage_in_docker.sh
